attachments/2235/make_all.log
/usr/bin/make  all-recursive
make[1]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4'
Making all in /home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl
make[2]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl'
make[2]: Nothing to be done for 'all'.
make[2]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl'
Making all in /home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa
make[2]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa'
Making all in src
make[3]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/src'
/usr/bin/make  all-am
make[4]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/src'
make[4]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/src'
make[3]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/src'
Making all in test
make[3]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/test'
make[3]: Nothing to be done for 'all'.
make[3]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/test'
make[3]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa'
make[3]: Nothing to be done for 'all-am'.
make[3]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa'
make[2]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa'
Making all in src/mpi/romio
make[2]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpi/romio'
make[3]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpi/romio'
make[3]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpi/romio'
make[2]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpi/romio'
Making all in src/pm/hydra
make[2]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/pm/hydra'
Making all in ../../mpl
make[3]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl'
make[3]: Nothing to be done for 'all'.
make[3]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl'
Making all in .
make[3]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/pm/hydra'
make[3]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/pm/hydra'
make[2]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/pm/hydra'
Making all in .
make[2]: Entering directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4'
/bin/sh ./libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I. -I./src/include  -I./src/include -I./src/mpi/datatype -I./src/mpi/spawn -Isrc/util/logging/common -I./src/util/wrappers -I./src/util/wrappers -I./src/binding/cxx -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/binding/fortran/mpif_h -Isrc/binding/fortran/use_mpi  -I./src/mpid/ch3/include -I./src/mpid/ch3/include -I./src/mpid/ch3/util/sock -I./src/mpid/ch3/util/sock  -I./src/mpid/ch3/channels/sock/include -I./src/mpid/ch3/channels/sock/include -I./src/mpid/common/datatype -I./src/mpid/common/datatype -I./src/mpid/common/sched -I./src/mpid/common/sock -I./src/mpid/common/sock -I./src/mpid/common/sock/poll -I./src/mpid/common/sock/poll -I./src/mpid/common/thread   -I./src/pmi/simple -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl/include -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl/include -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/src -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/src -D_REENTRANT -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpi/romio/include  -Wall -Wwrite-strings -Wno-strict-aliasing -Wno-unknown-pragmas -g3 -O0    -DNDEBUG -DNVALGRIND -O2 -D_NO_BITFIELDS -MT src/mpi/pt2pt/lib_libmpi_la-greq_start.lo -MD -MP -MF src/mpi/pt2pt/.deps/lib_libmpi_la-greq_start.Tpo -c -o src/mpi/pt2pt/lib_libmpi_la-greq_start.lo `test -f 'src/mpi/pt2pt/greq_start.c' || echo './'`src/mpi/pt2pt/greq_start.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I./src/include -I./src/include -I./src/mpi/datatype -I./src/mpi/spawn -Isrc/util/logging/common -I./src/util/wrappers -I./src/util/wrappers -I./src/binding/cxx -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/binding/fortran/mpif_h -Isrc/binding/fortran/use_mpi -I./src/mpid/ch3/include -I./src/mpid/ch3/include -I./src/mpid/ch3/util/sock -I./src/mpid/ch3/util/sock -I./src/mpid/ch3/channels/sock/include -I./src/mpid/ch3/channels/sock/include -I./src/mpid/common/datatype -I./src/mpid/common/datatype -I./src/mpid/common/sched -I./src/mpid/common/sock -I./src/mpid/common/sock -I./src/mpid/common/sock/poll -I./src/mpid/common/sock/poll -I./src/mpid/common/thread -I./src/pmi/simple -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl/include -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpl/include -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/src -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/openpa/src -D_REENTRANT -I/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4/src/mpi/romio/include -Wall -Wwrite-strings -Wno-strict-aliasing -Wno-unknown-pragmas -g3 -O0 -DNDEBUG -DNVALGRIND -O2 -D_NO_BITFIELDS -MT src/mpi/pt2pt/lib_libmpi_la-greq_start.lo -MD -MP -MF src/mpi/pt2pt/.deps/lib_libmpi_la-greq_start.Tpo -c src/mpi/pt2pt/greq_start.c -o src/mpi/pt2pt/lib_libmpi_la-greq_start.o
src/mpi/pt2pt/greq_start.c:234:5: error: function ‘MPIX_Grequest_class_create’ part of alias cycle
 int MPIX_Grequest_class_create(MPI_Grequest_query_function *query_fn,
     ^
src/mpi/pt2pt/greq_start.c:331:5: error: function ‘MPIX_Grequest_class_allocate’ part of alias cycle
 int MPIX_Grequest_class_allocate(MPIX_Grequest_class greq_class, void *extra_state, MPI_Request *request) __attribute__((weak,alias("MPIX_Grequest_class_allocate")));
     ^
src/mpi/pt2pt/greq_start.c:376:5: error: function ‘MPIX_Grequest_start’ part of alias cycle
 int MPIX_Grequest_start( MPI_Grequest_query_function *query_fn,
     ^
Makefile:29186: recipe for target 'src/mpi/pt2pt/lib_libmpi_la-greq_start.lo' failed
make[2]: *** [src/mpi/pt2pt/lib_libmpi_la-greq_start.lo] Error 1
make[2]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4'
Makefile:40727: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/balay/petsc.clone/arch-mswin-c-debug/externalpackages/mpich-3.1.4'
Makefile:10139: recipe for target 'all' failed
make: *** [all] Error 2
